<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainHeaderPopup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:paddingBottom="20dp"
    android:background="@drawable/custom_popup_shape">
    <LinearLayout
        android:id="@+id/userLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtviewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginTop="@dimen/notification_subtext_size"
            android:text="Rajiv Mahadevan"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/usernameSettingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/userLayout">
        <TextView
            android:id="@+id/settingsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_setting_button_text"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sign_out_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/usernameSettingLayout">

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/signout_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/drawer_layout_name_text_size"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/aboutUsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_out_container"
        android:gravity="center"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/txtAboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/kitaboo_main_color"
            android:text="@string/about_us_text"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_margin="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/privacy_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_below="@+id/aboutUsContainer"
       >
        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/kitaboo_main_color"
            android:text="@string/privacy_policy"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/privacy_divider"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <View
            android:id="@+id/privacy_divider"
            android:layout_width="2dp"

            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"


            android:background="@color/grey"
            android:layout_height="20dp">
        </View>

        <TextView
            android:id="@+id/terms_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/kitaboo_main_color"
            android:text="@string/terms_conditons"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
           android:layout_toRightOf="@+id/privacy_divider"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/version_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/privacy_container"
        android:gravity="center"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/kitaboo_main_color"
            android:text="@string/version_text"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_margin="20dp" />
    </RelativeLayout>


</RelativeLayout>