<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accessCodeContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <RelativeLayout
        android:id="@+id/selectBook_layout"
        android:layout_width="@dimen/accesscode_dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/button_padding"
        android:paddingLeft="5dp"
        android:visibility="gone"
        android:gravity="center">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:paddingTop="5dp"
            android:text="@string/duplicate_accessCode_select_book"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/books_recyclerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerText"
            android:paddingTop="10dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_below="@+id/books_recyclerList">

            <TextView
                android:id="@+id/txt_redeem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/duplicate_accessCode_redeem"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/kitaboo_main_color" />

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toLeftOf="@+id/txt_redeem"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/accesscode_dailog"
        android:layout_width="@dimen/accesscode_dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/button_padding"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtbookname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/add_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black_grey" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_access_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/access_code_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RelativeLayout
            android:id="@+id/accesskeylayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/btngo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:text="L"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:visibility="gone" />

            <EditText
                android:id="@+id/accesscodeedt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_toLeftOf="@+id/btngo"
                android:digits="@string/emailid_field_character_allowed"
                android:ems="10"
                android:hint="@string/dialog_login_edit_access_code"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:maxLength="255"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black_grey"
                android:textColorHint="@color/grey" />

            <View
                android:id="@+id/et_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/accesscodeedt" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/access_code_submit_text"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>