<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Mainparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SwipeUp_Background_Color"
    android:orientation="vertical"
    android:weightSum="2">

    <TextView
        android:id="@+id/txtselectStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="top"
        android:paddingLeft="15dp"
        android:text="@string/teacher_review_class_text"
        android:textColor="@color/blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtselectStudent"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/select_student_to_review"
        android:textSize="16sp"
        android:textColor="@color/blue_dark"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCancel"
        android:layout_marginTop="10dp"
        app:tabIndicatorColor="@color/blue_dark">

    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_above="@+id/generate_report_txt"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout">

    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/generate_report_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:lineSpacingExtra="6sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/teacher_review_generate_report_text"
        android:textSize="18sp" />


</RelativeLayout>